# minkipc

./: CMakeLists.txt
listeners/libtaautoload/src/: TaAutoLoad.cpp  TaAutoLoad.h
qtee_supplicant/: CMakeLists.txt
qtee_supplicant/include/: CListenerCBO.h  heap.h  heap_port.h  listener_mngr.h
qtee_supplicant/src/: CListenerCBO.c  listener_mngr.c  qtee_supplicant.c
